fix: toast spacing

--- a/src/application/assets/styles/index.scss
+++ b/src/application/assets/styles/index.scss
@@ -130,4 +130,6 @@ div.thin {
 		}
 	}
 }
+
+.swal2-popup.swal2-toast .swal2-title { margin: 0 0 0 0.5em !important; }
 /*! purgecss end ignore */
